# vane

./: .gitmodules  Cargo.toml  PAGING.md  PAGING_API.md  README.md  TESTING.md  package-lock.json  package.json  tsconfig.json
crates/vane/: Cargo.toml  LICENSE_MIT
crates/vane-cli/: Cargo.toml
crates/vane-cli/src/: main.rs
crates/vane-jit/: Cargo.toml  PAGING.md
crates/vane-jit/src/: arch.rs  flate.rs  hint.rs  lib.rs  template.rs
crates/vane-jit/src/template/: riscv.rs
crates/vane-meta-gen/: Cargo.toml
crates/vane-meta-gen/src/: lib.rs
crates/vane/_tests/: rv_corpus.rs
crates/vane/src/: lib.rs
crates/vane/tests/: rv_corpus.rs  web.rs
crates/vane/tests/binaries/: rv64i_01_basic_64bit  rv64im_01_multiply_divide_64
harness/: README.md
tests/: integration_test.rs
tools/: README.md  package.json  vane-tester-wasm.js  vane-tester-wasm.ts  vane-tester.js
vane/: Cargo.toml
vane/src/: lib.rs
