[workspace]
members=["crates/vane", "crates/vane-jit"]
resolver="3"

[workspace.dependencies]
portal-jsc-common =   {git="https://github.com/portal-co/jsaw-core.git",version="^0.8.0-pre.7"}
portal-jsc-swc-cfg =  {git="https://github.com/portal-co/jsaw-core.git",version="^0.8.0-pre.7"}
portal-jsc-swc-tac =  {git="https://github.com/portal-co/jsaw-core.git",version="^0.8.0-pre.7"}
portal-jsc-swc-ssa =  {git="https://github.com/portal-co/jsaw-core.git",version="^0.8.0-pre.7"}
portal-jsc-swc-util = {git="https://github.com/portal-co/jsaw-core.git",version="^0.8.0-pre.7"}

id-arena = "^2.2.1"
arena-traits = {version="^0.2.3",features=["id-arena"]}
ssa-traits = "^0.2.3"
cfg-traits = "^0.2.3"
ssa-impls =  "^0.2.3"
ssa-reloop = "^0.2.3"



swc_atoms = "^6.0.0"
swc_common = "^13.0.0"
swc_ecma_ast = "^13.0.0"
swc_ecma_compat_es2015 = "^19.0.0"
swc_ecma_minifier = "^23.0.0"
swc_ecma_transforms_base = "^18.0.0"
swc_ecma_transforms_optimization = "^19.0.0"
swc_ecma_utils = "^18.0.0"
swc_ecma_visit = "^13.0.0"
swc_bundler = "^22.0.0"
swc_ecma_loader = "^13.0.0"
swc_ecma_parser = "^17.0.0"
swc_ecma_codegen = "^15"
swc_ecma_quote = "^17"

portal-solutions-swibb="^0.2.6"

rv-asm = "0.2.1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
