[workspace]
members = ["crates/vane", "crates/vane-jit", "crates/vane-meta-gen", "crates/vane-cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
license = "MPL-2.0"
description = "Risc-V emulator for the Web, WASM, and anything based on them"

[workspace.dependencies]
wasmparser = { version = "0.244.0", default-features = false }
wasm-encoder = { version = "0.239.0", default-features = false, features = [
    "wasmparser",
] }

wax-core = { version = "0.1.0", git = "https://github.com/portal-co/wax.git", branch = "main" }

portal-solutions-asm-semantics = {version = "0.1.0",git = "https://github.com/portal-co/asm-arch.git"}
asim-core = { version = "0.1.0", git = "https://github.com/portal-co/asim.git", branch = "main" }

portal-pc-asm-common = {version = "0.1.1",git = "https://github.com/portal-co/asm-common.git"}

portal-jsc-common = { git = "https://github.com/portal-co/jsaw-core.git", version = "^0.8.0-pre.7" }
portal-jsc-swc-cfg = { git = "https://github.com/portal-co/jsaw-core.git", version = "^0.8.0-pre.7" }
portal-jsc-swc-tac = { git = "https://github.com/portal-co/jsaw-core.git", version = "^0.8.0-pre.7" }
portal-jsc-swc-ssa = { git = "https://github.com/portal-co/jsaw-core.git", version = "^0.8.0-pre.7" }
portal-jsc-swc-util = { git = "https://github.com/portal-co/jsaw-core.git", version = "^0.8.0-pre.7" }

id-arena = "^2.2.1"
arena-traits = { version = "^0.2.3", features = ["id-arena"] }
ssa-traits = "^0.2.3"
cfg-traits = "^0.2.3"
ssa-impls = "^0.2.3"
ssa-reloop = "^0.2.3"


swc_atoms = "^6.0.0"
swc_common = "^13.0.0"
swc_ecma_ast = "^13.0.0"
swc_ecma_compat_es2015 = "^19.0.0"
swc_ecma_minifier = "^23.0.0"
swc_ecma_transforms_base = "^18.0.0"
swc_ecma_transforms_optimization = "^19.0.0"
swc_ecma_utils = "^18.0.0"
swc_ecma_visit = "^13.0.0"
swc_bundler = "^22.0.0"
swc_ecma_loader = "^13.0.0"
swc_ecma_parser = "^17.0.0"
swc_ecma_codegen = "^15"
swc_ecma_quote = "^17"

portal-solutions-swibb = "^0.2.6"

rv-asm = "0.2.1"

wasm-bindgen = "0.2.100"
spin = "0.10.0"


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
